deployment/gameserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver-deployment
  labels:
    app: gameserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
      - name: gameserver
        image: glad2os/bmatch.gameserver
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: gameserver-service
spec:
  selector:
    app: gameserver
  ports:
    - name: ws1
      protocol: TCP
      port: 8005
      targetPort: 8005
    - name: ws2
      protocol: TCP
      port: 8004
      targetPort: 8004
  type: ClusterIP
