deployment/gateway-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmatch-gateway-service
spec:
  selector:
    app: bmatch-gateway
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmatch-gateway-deployment
  labels:
    app: bmatch-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bmatch-gateway
  template:
    metadata:
      labels:
        app: bmatch-gateway
    spec:
      containers:
      - name: bmatch-gateway
        image: glad2os/bmatch.gateway
        ports:
        - containerPort: 8002
        command: ["/bin/sh", "-c"]
        args: ["sh /app/wait-for-postgres.sh consul-service.default.svc.cluster.local:8500 && java -jar /app/app.jar"]
