deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svelte-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bubblematch.io
    - api.bubblematch.io
    secretName: bubblematch-tls
  rules:
  - host: bubblematch.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svelte-app-service
            port:
              number: 5173

  - host: api.bubblematch.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bmatch-gateway-service
            port:
              number: 8002
